# claude

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  harnesses.toml  install.py  install.sh  justfile  quality-autoresearch-issue-breakdown.md  quality-autoresearch-prd.md  settings.json  uninstall.sh
agents/: api-docs.md  changelog.md  deps.md  evaluator.md  generator.md  migrate.md  perf-profile.md  planner.md  research.md  security.md  test-gen.md
docs/agents/: domain.md  issue-tracker.md
harness/: pyproject.toml
harness/claude/: settings.json
harness/codex/: config.toml
harness/forge/: .forge.toml
harness/opencode/: opencode.json
harness/src/harness/: __init__.py  __main__.py  cli.py  init.py  notify.py  progress.py  runner.py  subprocess_env.py  tasks.py  verify.py
harness/src/harness/prompts/: __init__.py  coding.md  initializer.md
harness/tests/: test_notify.py  test_pi_package_install.py  test_progress.py  test_quality_evaluator_template.py  test_runner.py  test_tasks.py
hooks/: auto-format.sh  check-emdash.sh  notify-user.sh  post-edit-lint.sh  track-commits.sh  validate-commit.sh
hooks/gitnexus/: gitnexus-hook.cjs
pi-config/: .gitignore  README.md  autoresearch.config.json  install.sh  keybindings.json  link-local.sh  models.json  settings.json  uninstall.sh
pi-config/agents/: planner.md  researcher.md  reviewer.md  scout.md  verifier.md  worker.md
rules/: commits.md  style.md  workflow.md
skills/: omarchy
specs/: feat-agent-teams-integration.md  feat-long-running-harness.md  refactor-test-skill-real-world-validation.md
(+59 files in other folders)
