[project]
name = "harness"
version = "0.1.0"
description = "Long-running autonomous Claude Code process harness with user-level verification"
readme = "README.md"
authors = [
    { name = "Justin Barnett", email = "barnett.justin.p@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
]

[project.scripts]
harness = "harness.cli:cli"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
